EndpointConfiguration{Spec,Status} refactor
